<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/DialogStyle" >
     <LinearLayout
        android:id="@+id/welcome_dialog_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="9dp">
		    <Button android:id="@+id/stop_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/stop"
		        android:layout_marginTop="4dp"
		        android:layout_marginBottom="4dp"
		        android:layout_marginLeft="5dp"
		        style="@style/DialogButtonStyle"
		      />
		    <Button android:id="@+id/quit_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/quit"
		        android:layout_marginTop="4dp"
		        android:layout_marginBottom="4dp"
		        android:layout_marginLeft="5dp"
		        style="@style/DialogButtonStyle"
		      />
		     <Button android:id="@+id/return_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/returnText"
		        android:layout_marginTop="4dp"
		        android:layout_marginBottom="4dp"
		        android:layout_marginLeft="5dp"
		        style="@style/DialogButtonStyle"
		      />
    </LinearLayout>

</RelativeLayout>
